--- a/MduiBlazor/Components/Table/MduiHeadTr.razor
+++ b/MduiBlazor/Components/Table/MduiHeadTr.razor
@@ -2,7 +2,7 @@
 @inherits MduiComponentBase
 @typeparam TItem
 
-<tr class="@TrClass" style="@Style" @attributes="@AdditionalAttributes">
+<tr class="@Class" style="@Style" @attributes="@AdditionalAttributes">
     @if (Table?.MultiSelection == true)
     {
         <th class="mdui-table-cell-checkbox">
