--- a/MduiBlazor/Components/Form/MduiPicker.razor
+++ b/MduiBlazor/Components/Form/MduiPicker.razor
@@ -3,7 +3,7 @@
 @inherits MduiInputBase<TValue>
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    <input @ref="@_input" class="mdui-input" value="@DisplayValue" readonly="@_readonly" disabled="@Disabled"
+    <input class="@InputClassname" value="@DisplayValue" readonly="@_readonly" disabled="@Disabled"
         placeholder="@Placeholder" autofocus="@AutoFocus" required="@Required" @oninput="@OnInput"
         @onfocus="@OnPickerFocus" />
     <ul class="@ContentClassname" style="@ContentStylelist">
