--- a/mdui/src/components/input/slider.less
+++ b/mdui/src/components/input/slider.less
@@ -83,7 +83,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #5e5e5e;
+    background-color: rgba(0, 0, 0, .35);
     border-radius: 50%;
     transform: scale(0);
     opacity: 0.3;
@@ -195,7 +195,7 @@
 
 input[type="range"]:not(:disabled):hover {
   ~.mdui-slider-thumb::before {
-    transform: scale(0.7);
+    transform: scale(1.2);
   }
 }
 
@@ -279,7 +279,7 @@ input[type="range"]:not(:disabled):hover {
   }
 
   .mdui-slider-thumb::before {
-    background-color: #dedede;
+    background-color: rgba(255, 255, 255, .35);
   }
 
   // 鼠标按下状态
