--- a/mdui/src/components/input/picker.less
+++ b/mdui/src/components/input/picker.less
@@ -15,6 +15,11 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath d='M-.003 2.5l5 5 5-5h-10z' opacity='.54'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: right center;
+
+    &.mdui-input-searchable{
+      position: relative;
+      z-index: calc(@z-index-overlay + 1);
+    }
   }
 
   /* 下拉内容 */
