update and add treepicker component

--- a/MduiBlazor.Shared/Pages/Examples/Pickers/IconPicker.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Pickers/IconPicker.razor
@@ -4,114 +4,114 @@
 
 <MduiPicker ContentStyle="display:flex;flex-wrap:wrap;" Searchable="@searchable" Readonly="@read_only"
     Disabled="@disabled" TValue="@string" MaxHeight="200px">
-    <MduiOption Value="@("add")" Label="add">
+    <MduiPickerItem Style="width:auto;" Value="@("add")" DisplayString="add">
         <MduiIcon Icon="add" />
-    </MduiOption>
-    <MduiOption Value="@("add_alarm")" Label="add_alarm">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("add_alarm")" DisplayString="add_alarm">
         <MduiIcon Icon="add_alarm" />
-    </MduiOption>
-    <MduiOption Value="@("add_box")" Label="add_box">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("add_box")" DisplayString="add_box">
         <MduiIcon Icon="add_box" />
-    </MduiOption>
-    <MduiOption Value="@("add_location")" Label="add_location">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("add_location")" DisplayString="add_location">
         <MduiIcon Icon="add_location" />
-    </MduiOption>
-    <MduiOption Value="@("add_shopping_cart")" Label="add_shopping_cart">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("add_shopping_cart")" DisplayString="add_shopping_cart">
         <MduiIcon Icon="add_shopping_cart" />
-    </MduiOption>
-    <MduiOption Value="@("airplanemode_active")" Label="airplanemode_active">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("airplanemode_active")" DisplayString="airplanemode_active">
         <MduiIcon Icon="airplanemode_active" />
-    </MduiOption>
-    <MduiOption Value="@("airplanemode_inactive")" Label="airplanemode_inactive">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("airplanemode_inactive")" DisplayString="airplanemode_inactive">
         <MduiIcon Icon="airplanemode_inactive" />
-    </MduiOption>
-    <MduiOption Value="@("airplay")" Label="airplay">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("airplay")" DisplayString="airplay">
         <MduiIcon Icon="airplay" />
-    </MduiOption>
-    <MduiOption Value="@("alarm")" Label="alarm">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("alarm")" DisplayString="alarm">
         <MduiIcon Icon="alarm" />
-    </MduiOption>
-    <MduiOption Value="@("alarm_on")" Label="alarm_on">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("alarm_on")" DisplayString="alarm_on">
         <MduiIcon Icon="alarm_on" />
-    </MduiOption>
-    <MduiOption Value="@("alarm_off")" Label="alarm_off">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("alarm_off")" DisplayString="alarm_off">
         <MduiIcon Icon="alarm_off" />
-    </MduiOption>
-    <MduiOption Value="@("arrow_back")" Label="arrow_back">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("arrow_back")" DisplayString="arrow_back">
         <MduiIcon Icon="arrow_back" />
-    </MduiOption>
-    <MduiOption Value="@("arrow_downward")" Label="arrow_downward">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("arrow_downward")" DisplayString="arrow_downward">
         <MduiIcon Icon="arrow_downward" />
-    </MduiOption>
-    <MduiOption Value="@("arrow_forward")" Label="arrow_forward">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("arrow_forward")" DisplayString="arrow_forward">
         <MduiIcon Icon="arrow_forward" />
-    </MduiOption>
-    <MduiOption Value="@("arrow_upward")" Label="arrow_upward">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("arrow_upward")" DisplayString="arrow_upward">
         <MduiIcon Icon="arrow_upward" />
-    </MduiOption>
-    <MduiOption Value="@("arrow_drop_down")" Label="arrow_drop_down">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("arrow_drop_down")" DisplayString="arrow_drop_down">
         <MduiIcon Icon="arrow_drop_down" />
-    </MduiOption>
-    <MduiOption Value="@("arrow_drop_up")" Label="arrow_drop_up">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("arrow_drop_up")" DisplayString="arrow_drop_up">
         <MduiIcon Icon="arrow_drop_up" />
-    </MduiOption>
-    <MduiOption Value="@("battery_charging_full")" Label="battery_charging_full">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("battery_charging_full")" DisplayString="battery_charging_full">
         <MduiIcon Icon="battery_charging_full" />
-    </MduiOption>
-    <MduiOption Value="@("battery_full")" Label="battery_full">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("battery_full")" DisplayString="battery_full">
         <MduiIcon Icon="battery_full" />
-    </MduiOption>
-    <MduiOption Value="@("battery_unknown")" Label="battery_unknown">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("battery_unknown")" DisplayString="battery_unknown">
         <MduiIcon Icon="battery_unknown" />
-    </MduiOption>
-    <MduiOption Value="@("block")" Label="block">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("block")" DisplayString="block">
         <MduiIcon Icon="block" />
-    </MduiOption>
-    <MduiOption Value="@("bluetooth")" Label="bluetooth">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("bluetooth")" DisplayString="bluetooth">
         <MduiIcon Icon="bluetooth" />
-    </MduiOption>
-    <MduiOption Value="@("bluetooth_audio")" Label="bluetooth_audio">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("bluetooth_audio")" DisplayString="bluetooth_audio">
         <MduiIcon Icon="bluetooth_audio" />
-    </MduiOption>
-    <MduiOption Value="@("bluetooth_connected")" Label="bluetooth_connected">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("bluetooth_connected")" DisplayString="bluetooth_connected">
         <MduiIcon Icon="bluetooth_connected" />
-    </MduiOption>
-    <MduiOption Value="@("bluetooth_disabled")" Label="bluetooth_disabled">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("bluetooth_disabled")" DisplayString="bluetooth_disabled">
         <MduiIcon Icon="bluetooth_disabled" />
-    </MduiOption>
-    <MduiOption Value="@("book")" Label="book">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("book")" DisplayString="book">
         <MduiIcon Icon="book" />
-    </MduiOption>
-    <MduiOption Value="@("bookmark")" Label="bookmark">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("bookmark")" DisplayString="bookmark">
         <MduiIcon Icon="bookmark" />
-    </MduiOption>
-    <MduiOption Value="@("bookmark_border")" Label="bookmark_border">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("bookmark_border")" DisplayString="bookmark_border">
         <MduiIcon Icon="bookmark_border" />
-    </MduiOption>
-    <MduiOption Value="@("border_all")" Label="border_all">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("border_all")" DisplayString="border_all">
         <MduiIcon Icon="border_all" />
-    </MduiOption>
-    <MduiOption Value="@("border_bottom")" Label="border_bottom">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("border_bottom")" DisplayString="border_bottom">
         <MduiIcon Icon="border_bottom" />
-    </MduiOption>
-    <MduiOption Value="@("border_clear")" Label="border_clear">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("border_clear")" DisplayString="border_clear">
         <MduiIcon Icon="border_clear" />
-    </MduiOption>
-    <MduiOption Value="@("brightness_1")" Label="brightness_1">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("brightness_1")" DisplayString="brightness_1">
         <MduiIcon Icon="brightness_1" />
-    </MduiOption>
-    <MduiOption Value="@("brightness_2")" Label="brightness_2">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("brightness_2")" DisplayString="brightness_2">
         <MduiIcon Icon="brightness_2" />
-    </MduiOption>
-    <MduiOption Value="@("brightness_3")" Label="brightness_3">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("brightness_3")" DisplayString="brightness_3">
         <MduiIcon Icon="brightness_3" />
-    </MduiOption>
-    <MduiOption Value="@("brightness_4")" Label="brightness_4">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("brightness_4")" DisplayString="brightness_4">
         <MduiIcon Icon="brightness_4" />
-    </MduiOption>
-    <MduiOption Value="@("brightness_5")" Label="brightness_5">
+    </MduiPickerItem>
+    <MduiPickerItem Style="width:auto;" Value="@("brightness_5")" DisplayString="brightness_5">
         <MduiIcon Icon="brightness_5" />
-    </MduiOption>
+    </MduiPickerItem>
 </MduiPicker>
 
 @code {
