--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -50,6 +50,7 @@
             <MduiNavMenuItem Href="pagination" Icon="">分页</MduiNavMenuItem>
             <MduiNavMenuItem Href="treeview" Icon="">树形组件</MduiNavMenuItem>
             <MduiNavMenuItem Href="picker" Icon="">通用选择器</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tree-picker" Icon="">树形数据选择器</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
