--- a/mdui/src/components/button/index.less
+++ b/mdui/src/components/button/index.less
@@ -164,7 +164,7 @@ input.mdui-btn[type="submit"] {
     left: 50%;
     width: 24px;
     line-height: 24px;
-    transform: translate(-12px, -12px);
+    transform: translate(-50%, -50%);
   }
 
   &.mdui-ripple {
