--- a/MduiBlazor.Shared/Pages/Examples/Pickers/MultiPicker.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Pickers/MultiPicker.razor
@@ -3,14 +3,16 @@
 <MduiCheckbox Switch @bind-Value="@searchable" Label="开启搜索" />
 <MduiCheckbox Switch @bind-Value="@read_only" Label="只读" />
 <MduiCheckbox Switch @bind-Value="@disabled" Label="禁用" />
+<MduiCheckbox Switch @bind-Value="@dense" Label="紧凑型" />
 
-<MduiPicker Searchable="@searchable" Readonly="@read_only" Disabled="@disabled" MultiSelection @bind-SelectedValues="@selectedValues" MaxHeight="200px">
-    <MduiOption Label="option1" Value="@("option1")">option1</MduiOption>
-    <MduiOption Label="option2" Value="@("option2")">option2</MduiOption>
-    <MduiOption Label="option3" Value="@("option3")">option3</MduiOption>
-    <MduiOption Label="option4" Value="@("option4")">option4</MduiOption>
-    <MduiOption Label="option5" Value="@("option5")">option5</MduiOption>
-    <MduiOption Label="option6" Value="@("option6")">option6</MduiOption>
+<MduiPicker Searchable="@searchable" Readonly="@read_only" Disabled="@disabled" Dense="@dense" MultiSelection
+    @bind-SelectedValues="@selectedValues" MaxHeight="200px">
+    <MduiPickerItem DisplayString="option1" Value="@("option1")" />
+    <MduiPickerItem DisplayString="option2" Value="@("option2")" />
+    <MduiPickerItem DisplayString="option3" Value="@("option3")" />
+    <MduiPickerItem DisplayString="option4" Value="@("option4")" />
+    <MduiPickerItem DisplayString="option5" Value="@("option5")" />
+    <MduiPickerItem DisplayString="option6" Value="@("option6")" />
 </MduiPicker>
 
 @code {
@@ -18,4 +20,5 @@
     bool searchable;
     bool read_only;
     bool disabled;
+    bool dense;
 }
