--- a/MduiBlazor/Components/Form/Picker/MduiTreePicker.razor
+++ b/MduiBlazor/Components/Form/Picker/MduiTreePicker.razor
@@ -3,7 +3,7 @@
 @inherits MduiInputBase<TValue>
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    <input class="mdui-input" value="@DisplayValue" readonly="@Readonly" disabled="@Disabled" placeholder="@Placeholder"
+    <input class="mdui-input" value="@DisplayValue" readonly="@true" disabled="@Disabled" placeholder="@Placeholder"
         autofocus="@AutoFocus" required="@Required" @onfocus="@OnPickerFocus" />
     <ul class="@ContentClassname" style="@ContentStylelist">
         <CascadingValue Value="@this" IsFixed>
